#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
DG-2011-04-04-0: Bugfix:     Fixed test 1780.
                 Review:     SH

DG-2011-04-01-2: Cleanup:    Fixed race condition in 2254 test.
                 Review:     EB

DG-2011-04-01-1: Bugfix:     Fixed broken jsv_ge_add test.
                 Review:     JG

DG-2011-04-01-0: Cleanup:    Removed service tags test from testsuite since
                             service tags are not a part of GE anymore.
                 Review:     JG

JG-2011-03-31-0: Enhancem.:  o remove cvs repository handling from testsuite
                             o add new config option package_release
                 Issue:      TS-341
                 Review:     HP

HP-2011-03-31-0: Bugfix:     fixed a race condition in core_binding_basic test
                 Issue:      TS-368
                 Review:     DG

HP-2011-03-30-0: Bugfix:     issue_1760 test used "tail +2" which isn't
                             available on all Linux versions
                             -> changed to "tail -n +2", which seems to work
                             everywhere
                 Issue:      No issue for this minor bug

DG-2011-03-30-0: Cleanup:    added -jmx as default parameter, because
                             otherwise a JMX installation would not be
                             possible anymore (this has to be changed later)

JG-2011-03-29-0: Bugfix:     checktree_arco:
                             - removed reporting (Web Console) specific code
                             - fixed build, install and tests except for the
                               junit test