@@ -6,6 +6,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+HP-2011-04-04-0: Enhancem.:  Added test for qrsh line breaks
+                 Issue:      TS-353, GE-3382
+					  Review:     SH
+
 DG-2011-04-04-0: Bugfix:     Fixed test 1780.
                  Review:     SH
 
